# AirModel

./: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
CHANGELOG/: 0.1.0.md  0.1.1.md  0.1.2.md  0.2.0.md  0.3.0.md  0.4.0.md  0.4.1.md  0.4.2.md
docs/: api.md  index.md  installation.md  usage.md
src/airmodel/: __init__.py  cli.py  main.py
tests/: test_airmodel.py  test_table_prefix.py
