[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AirModel"
version = "0.1.1"
description = "Async ORM for Pydantic models and PostgreSQL, with a Django-inspired API"
readme = "README.md"
authors = [
  {name = "Audrey M. Roy Greenfeld", email = "audrey@feldroy.com"}
]
maintainers = [
  {name = "Audrey M. Roy Greenfeld", email = "audrey@feldroy.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "asyncpg>=0.30.0",
    "AirField>=0.2.0",
    "typer",
    "rich",
]
requires-python = ">= 3.13"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/feldroy/airmodel/issues"
changelog = "https://github.com/feldroy/airmodel/releases"
documentation = "https://feldroy.github.io/airmodel/"
homepage = "https://github.com/feldroy/airmodel"

[project.scripts]
airmodel = "airmodel.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.uv.sources]
AirField = { path = "../AirField", editable = true }
